# Bedrock-Encryption

./: .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json
.cmake/: compiler_options.cmake  copy_openssl_runtime_libs.cmake  linkage.cmake  openssl.cmake  policy.cmake  post_build.cmake
.cmake/cmake_include/: config.h.in
.cmake/presets/: linux.json  windows.json
.github/workflows/: OnMasterReleasePush.yml
include/encryption/: encryption.h  interfaces.h  pch.h
include/encryption/block_cipher/: aes.h
include/encryption/block_cipher/mode/: aliases.h  cbc.h  ctr.h  ecb.h  gcm.h  openssl.h  operation.h
include/encryption/cipher/: aes.h
include/encryption/cipher/mode/: aliases.h  cbc.h  ctr.h  ecb.h  openssl.h  operation.h
include/encryption/hash/: sha.h
include/encryption/util/: helper.h  nist_testvector_parser.h
src/encryption/: interfaces.cc
src/encryption/block_cipher/: aes.cc  aes_ni.cc  aes_openssl.cc  aes_soft.cc
src/encryption/block_cipher/mode/: aliases.cc  cbc.cc  ctr.cc  ecb.cc  gcm.cc  openssl.cc  operation.cc
src/encryption/cipher/: aes.cc  aes_ni.cc  aes_soft.cc
src/encryption/cipher/mode/: aliases.cc  cbc.cc  ctr.cc  ecb.cc  openssl.cc  operation.cc
src/encryption/util/: helper.cc  nist_testvector_parser.cc
test/: CMakeLists.txt  LibraryLoadCheck.cc  StandardIncrement.cc
test/aes/: CBCGFSbox128.cc  CBCGFSbox192.cc  CBCGFSbox256.cc  CBCKeySbox128.cc  CBCKeySbox192.cc  CBCKeySbox256.cc  CBCMCT128_complex.cc  CBCMCT128_simple.cc  CBCMCT192_complex.cc  CBCMCT192_simple.cc  CBCMCT256_complex.cc  CBCMCT256_simple.cc  CBCMMT128.cc  CBCMMT192.cc  CBCMMT256.cc  CBCVarKey128.cc  CBCVarKey192.cc  CBCVarKey256.cc  CBCVarTxt128.cc  CBCVarTxt192.cc  CBCVarTxt256.cc  CMakeLists.txt  ECBGFSbox128.cc  ECBGFSbox192.cc  ECBGFSbox256.cc  ECBKeySbox128.cc  ECBKeySbox192.cc  ECBKeySbox256.cc  ECBMCT128_complex.cc  ECBMCT128_simple.cc  ECBMCT192_complex.cc  ECBMCT192_simple.cc  ECBMCT256_complex.cc  ECBMCT256_simple.cc  ECBMMT128.cc  ECBMMT192.cc  ECBMMT256.cc  ECBVarKey128.cc  ECBVarKey192.cc  ECBVarKey256.cc  (+11 more)
test/include/common/: benchmark_runner.h  kat_runner.h  mct_runner.h  nist_testvector_parser.h
test/sha256/: CMakeLists.txt  bit_long.cc  bit_long_stream.cc  bit_monte_complex.cc  bit_monte_simple.cc  bit_monte_stream_complex.cc  bit_monte_stream_simple.cc  bit_short.cc  bit_short_stream.cc  byte_long.cc  byte_long_stream.cc  byte_monte_complex.cc  byte_monte_simple.cc  byte_monte_stream_complex.cc  byte_monte_stream_simple.cc  byte_short.cc  byte_short_stream.cc
test/src/common/: nist_testvector_parser.cc
